--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -38,6 +38,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.vip.trello.AppsList"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 	   	<service android:name="com.vip.trello.service.TrelloService"
             android:enabled="true"
             android:process=":TrelloService">
